--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p>Quizzy<span>Quest</span></p>
         </div>
         <div class="right-nav">
-            <button class="nav-btn">Login<div class="amim"></div></button>
+            <button class="nav-btn"><span>Login</span><div class="amim"></div></button>
         </div>
     </nav>
     <main>
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="right-main">
-            <img src="./image/icon.png" class="main-icon">
+            <img src="./image/icon.png" class="main-icon" data-tilt data-tilt-max="10" data-tilt-speed="500" data-tilt-perspective="500">
         </div> 
     </main>
     <div class="dificulty">
