--- a/index.html
+++ b/index.html
@@ -32,30 +32,29 @@
         <div class="easy box" data-tilt data-tilt-max="10" data-tilt-speed="500" data-tilt-perspective="500">
             <p>Play as a Begginer!<br>Easy</p>
             <img src="./image/blue.png" class="box-img md">
-            <div class="button">
-                <p>Play</p>
-                <img src="./image/curved-arrow.png" class="next-i">
+            <div class="button" id="easy">
+                <p id="easy">Play</p>
+                <img src="./image/curved-arrow.png" id="easy" class="next-i">
             </div>
         </div>
         <div class="medium box" data-tilt data-tilt-max="10" data-tilt-speed="500" data-tilt-perspective="500">
             <p>Play as a intermediate!<br>Medium</p>
             <img src="./image/yellow.png" class="box-img">
-            <div class="button">
-                <p>Play</p>
-                <img src="./image/curved-arrow.png" class="next-i">
+            <div class="button" id="medium">
+                <p id="medium">Play</p>
+                <img src="./image/curved-arrow.png" id="medium" class="next-i">
             </div>
         </div>
         <div class="hard box" data-tilt data-tilt-max="10" data-tilt-speed="500" data-tilt-perspective="500">
             <p>Play as a Pro!<br>Hard</p>
             <img src="./image/red.png" class="box-img md">
-            <div class="button">
-                <p>Play</p>
-                <img src="./image/curved-arrow.png" class="next-i">
+            <div class="button" id="hard">
+                <p id="hard">Play</p>
+                <img src="./image/curved-arrow.png" class="next-i" id="hard">
             </div>
         </div>
     </div>
     <script src="./framework/anime-master/lib/anime.min.js"></script>
     <script src="./framework/vanilla-tilt/lib/vanilla-tilt.js"></script>
     <script src="./script.js"></script>
-</body>
 </html>
