--- a/framework/anime-master/documentation/examples/advanced-staggering.html
+++ b/framework/anime-master/documentation/examples/advanced-staggering.html
@@ -70,6 +70,7 @@
   </div>
 
 </body>
+  <script src="../../lib/anime.min.js"></script>
 <script type="module">
 
   import anime from '../../src/index.js';
