--- a/index.html
+++ b/index.html
@@ -1,60 +1,401 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QuizzyQuest</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      body::-webkit-scrollbar {
+        width: 0;
+      }
+      body {
+        width: 100vw;
+        height: 100vh;
+        background-color: #c1f1f4;
+        overflow-y: scroll;
+        scrollbar-width: 0;
+      }
+      nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1.5% 4%;
+        position: sticky;
+        top: 0;
+      }
+      .left-nav {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+      }
+      .left-nav p {
+        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+        font-size: 26px;
+        font-weight: 600;
+        color: #21888e;
+      }
+      .left-nav p span {
+        font-weight: 100;
+        opacity: 0.9;
+      }
+
+      .right-nav {
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .right-nav button {
+        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+        background-color: transparent;
+        border: 2px solid #21888e;
+        color: #21888e;
+        font-size: 17px;
+        letter-spacing: 1px;
+        padding: 5px 40px;
+        border-radius: 25px;
+        cursor: pointer;
+        overflow: hidden;
+        position: relative;
+      }
+      .amim {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 0%;
+        background-color: #71dfe583;
+        z-index: -1;
+        transition: all linear 0.3s;
+      }
+      .width {
+        width: 100%;
+      }
+      .main-icon {
+        width: 500px;
+      }
+      main {
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1.5% 4%;
+        padding-right: 8%;
+      }
+      .up-text {
+        font-size: 100px;
+        font-family: Arial, Helvetica, sans-serif;
+        line-height: 90px;
+        font-weight: 600;
+        color: #21888e;
+        margin-bottom: 5%;
+      }
+      .dn-text {
+        font-size: 18px;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        color: #fff;
+        background-color: #21888e;
+        padding: 10%;
+        border-top-right-radius: 20px;
+        border-bottom-right-radius: 20px;
+        border-bottom-left-radius: 80px;
+        text-align: center;
+      }
+      .dificulty {
+        width: 100%;
+        height: 30%;
+        display: flex;
+        justify-content: center;
+        gap: 10%;
+        align-items: center;
+        padding: 0 8%;
+        margin-top: 5%;
+      }
+      .box {
+        width: 300px;
+        height: 200px;
+        background-color: #fff;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        padding-bottom: 10px;
+        text-align: center;
+        border-radius: 20px;
+        color: #21888e;
+        font-weight: 600;
+        letter-spacing: 1px;
+      }
+      .box-img {
+        width: 130px;
+      }
+      .md {
+        width: 100px;
+      }
+      .next-i {
+        width: 32px;
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        background-color: #c1f1f4;
+        border-radius: 18px;
+        padding: 4.5px;
+        transition: all 0.1s;
+        cursor: pointer;
+      }
+      .button {
+        position: relative;
+        display: flex;
+        border: 1px solid #21888e;
+        padding: 5px 80px;
+        border-radius: 25px;
+        cursor: pointer;
+        transition: all linear 0.3s;
+      }
+      .button:hover {
+        transform: scale(1.1);
+        transform: rotate(-2deg);
+      }
+      .next-i:hover {
+        transform: scale(1.1);
+      }
+
+      @media (min-width: 551px) and (max-width: 768px) {
+        body {
+          overflow-y: scroll;
+        }
+        main {
+          flex-direction: column;
+          position: relative;
+          margin-top: 5%;
+          margin-bottom: 5%;
+        }
+        .right-main {
+          position: absolute;
+          z-index: -1;
+          top: -10px;
+        }
+      }
+      @media (min-width: 415px) and (max-width: 550px) {
+        body {
+          overflow-y: scroll;
+        }
+        .up-text {
+          font-size: 80px;
+        }
+        .right-main {
+          display: none;
+        }
+        .dificulty {
+          margin-top: 5%;
+          flex-direction: column;
+          justify-content: start;
+        }
+      }
+      @media (min-width: 0px) and (max-width: 414px) {
+        main {
+          display: none;
+        }
+        .dificulty {
+          margin-top: 8%;
+          flex-direction: column;
+          justify-content: start;
+        }
+      }
+    </style>
+  </head>
+  <body>
     <nav>
-        <div class="left-nav">
-            <p>Quizzy<span>Quest</span></p>
-        </div>
-        <div class="right-nav">
-            <button class="nav-btn"><span>Login</span><div class="amim"></div></button>
-        </div>
+      <div class="left-nav">
+        <p>Quizzy<span>Quest</span></p>
+      </div>
+      <div class="right-nav">
+        <button class="nav-btn">
+          <span>Login</span>
+          <div class="amim"></div>
+        </button>
+      </div>
     </nav>
     <main>
-        <div class="left-main">
-            <div class="up-text">
-                <p>Improve<br>your mind</p>
-            </div>
-            <div class="dn-text">
-                <p>Do you like quizes and competitions?<br>Find or create quize on any topic!</p>
-            </div>
+      <div class="left-main">
+        <div class="up-text">
+          <p>Improve<br />your mind</p>
         </div>
-        <div class="right-main">
-            <img src="./image/icon.png" class="main-icon" data-tilt data-tilt-max="10" data-tilt-speed="500" data-tilt-perspective="500">
-        </div> 
+        <div class="dn-text">
+          <p>
+            Do you like quizes and competitions?<br />Find or create quize on
+            any topic!
+          </p>
+        </div>
+      </div>
+      <div class="right-main">
+        <img
+          src="./image/icon.png"
+          class="main-icon"
+          data-tilt
+          data-tilt-max="10"
+          data-tilt-speed="500"
+          data-tilt-perspective="500"
+        />
+      </div>
     </main>
     <div class="dificulty">
-        <div class="easy box" data-tilt data-tilt-max="10" data-tilt-speed="500" data-tilt-perspective="500">
-            <p>Play as a Begginer!<br>Easy</p>
-            <img src="./image/blue.png" class="box-img md">
-            <div class="button" id="easy">
-                <p id="easy">Play</p>
-                <img src="./image/curved-arrow.png" id="easy" class="next-i">
-            </div>
+      <div
+        class="easy box"
+        data-tilt
+        data-tilt-max="10"
+        data-tilt-speed="500"
+        data-tilt-perspective="500"
+      >
+        <p>Play as a Begginer!<br />Easy</p>
+        <img src="./image/blue.png" class="box-img md" />
+        <div class="button" id="easy">
+          <p id="easy">Play</p>
+          <img src="./image/curved-arrow.png" id="easy" class="next-i" />
         </div>
-        <div class="medium box" data-tilt data-tilt-max="10" data-tilt-speed="500" data-tilt-perspective="500">
-            <p>Play as a intermediate!<br>Medium</p>
-            <img src="./image/yellow.png" class="box-img">
-            <div class="button" id="medium">
-                <p id="medium">Play</p>
-                <img src="./image/curved-arrow.png" id="medium" class="next-i">
-            </div>
+      </div>
+      <div
+        class="medium box"
+        data-tilt
+        data-tilt-max="10"
+        data-tilt-speed="500"
+        data-tilt-perspective="500"
+      >
+        <p>Play as a intermediate!<br />Medium</p>
+        <img src="./image/yellow.png" class="box-img" />
+        <div class="button" id="medium">
+          <p id="medium">Play</p>
+          <img src="./image/curved-arrow.png" id="medium" class="next-i" />
         </div>
-        <div class="hard box" data-tilt data-tilt-max="10" data-tilt-speed="500" data-tilt-perspective="500">
-            <p>Play as a Pro!<br>Hard</p>
-            <img src="./image/red.png" class="box-img md">
-            <div class="button" id="hard">
-                <p id="hard">Play</p>
-                <img src="./image/curved-arrow.png" class="next-i" id="hard">
-            </div>
+      </div>
+      <div
+        class="hard box"
+        data-tilt
+        data-tilt-max="10"
+        data-tilt-speed="500"
+        data-tilt-perspective="500"
+      >
+        <p>Play as a Pro!<br />Hard</p>
+        <img src="./image/red.png" class="box-img md" />
+        <div class="button" id="hard">
+          <p id="hard">Play</p>
+          <img src="./image/curved-arrow.png" class="next-i" id="hard" />
         </div>
+      </div>
     </div>
     <script src="./framework/anime-master/lib/anime.min.js"></script>
     <script src="./framework/vanilla-tilt/lib/vanilla-tilt.js"></script>
-    <script src="./script.js"></script>
+    <script>
+      let login = localStorage.getItem("login") || "false";
+      let change = document.querySelector(".nav-btn span");
+      let click = document.querySelector(".nav-btn");
+      click.addEventListener("click", (e) => {
+        if (change.innerHTML == "Login") {
+          window.location.href = "./login/login.html";
+        } else if (change.innerHTML == "Logout") {
+          localStorage.clear();
+          window.location.reload();
+        }
+      });
+      if (login == "false") {
+        change.innerHTML = "Login";
+      } else if (login == "true") {
+        change.innerHTML = "Logout";
+      }
+      document.body.addEventListener("click", (e) => {
+        if (login == false || login == "false") {
+          window.location.href = "./login/login.html";
+        }
+      });
+
+      let logbtn = document.querySelector(".nav-btn");
+      let amim = document.querySelector(".amim");
+      logbtn.addEventListener("mouseover", (e) => {
+        amim.classList.add("width");
+      });
+      logbtn.addEventListener("mouseout", (e) => {
+        amim.classList.remove("width");
+      });
+
+      anime({
+        targets: ".left-nav p",
+        translateY: [
+          { value: "-150px", duration: 0 },
+          { value: "0", duration: 1000 },
+        ],
+        easing: "easeInOutQuad",
+      });
+      anime({
+        targets: ".right-nav button",
+        translateY: "-150px",
+        duration: 1500,
+        delay: 1000,
+        direction: "reverse",
+        easing: "easeInOutQuad",
+      });
+
+      let text = document.querySelector(".up-text p");
+      text.innerHTML =
+        "<span>I</span><span>m</span><span>p</span><span>r</span><span>o</span><span>v</span><span>e</span><span><br></span><span>y</span><span>o</span><span>u</span><span>r</span><span> </span><span>m</span><span>i</span><span>n</span><span>d</span>";
+
+      anime({
+        targets: ".up-text p span",
+        translateY: [
+          { value: "50px", duration: 0 },
+          { value: "0", duration: 800 },
+        ],
+        opacity: [
+          { value: 0, duration: 0 },
+          { value: 1, duration: 800 },
+        ],
+        delay: anime.stagger(100, { start: 800 }), // Delay the start of the animation
+        easing: "easeInOutQuad",
+      });
+
+      anime({
+        targets: ".dn-text",
+        translateX: "-1500px",
+        duration: 3000,
+        delay: 4000,
+        direction: "reverse",
+        easing: "easeInOutQuad",
+      });
+
+      anime({
+        targets: ".main-icon",
+        translateX: "2500px",
+        duration: 3500,
+        delay: 6000,
+        direction: "reverse",
+        easing: "easeInOutQuad",
+      });
+
+      anime({
+        targets: ".box",
+        translateY: "1000px",
+        duration: 3000,
+        delay: anime.stagger(500, { start: 1000 }),
+        direction: "reverse",
+        easing: "easeInOutQuad",
+      });
+
+      let play = document.querySelectorAll(".button");
+      play.forEach((play) => {
+        play.addEventListener("click", (e) => {
+          let difficulty = e.target.id;
+          localStorage.setItem("dif", difficulty);
+          window.location.href = "./category/index.html";
+        });
+      });
+    </script>
+  </body>
 </html>
